--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="bIMpaD4hgbN3vbUt8fe6OIGVItGvJPw/WTAuuWT2FnxNSIAR36VfDPvwbU8RYx+5CArIlc3BCmbzBn2mSPuoIeMtzIVinPSMHFDKwxFTE5c9Ay5qDiANhAPLxw49cc+W" data-form-email="true">
+                        <input type="hidden" value="yS9Mj+zNlViXUvngdUOjYTTBbkYUZtW4TC2hum9PHiVSATUbuJIIGaZ1Z9WWYc1iCjg9onWGMmiDACLmWwIyBO3F58UCd6HhoIPAaXJ8q1cSnZ1GtqegqdOgZRahIi7U" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LhzYSXGCz63gbZmSEHjOWmOS1hYtp1VuIB9nAGGKUoPaKO9BIh98C3393Fyk4bkzH7r9RPLFJtNJIxBqh8H7Kvawz8TVIuGrGvL2fvca+PJo7THZLa7YDYRTs+q/CfXL" data-form-email="true">
+                    <input type="hidden" value="C62xqR+2xV1EK1YijxQR4FfBAqxNvUx3q1y6XNMG59PcAEATZmsHhI0ouRmxYi7vGaDcTLpY8PtfaBu948I6wVpk/L5WoMgV/yli3epTM4fkRQcWHyJW87dMrbWdAZKY" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
